working but no cache
implemented table view, detail view, imported data, but have not yet implemented image caching or loading more data.

--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -19,27 +19,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="contactCell" id="zQB-Gz-OZU" customClass="UserCellController" customModule="Random_Users" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="contactCell" rowHeight="60" id="zQB-Gz-OZU" customClass="UserCellController" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="60"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zQB-Gz-OZU" id="TgL-Gh-TPN">
-                                    <rect key="frame" x="0.0" y="0.0" width="341" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="341" height="59.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="54" translatesAutoresizingMaskIntoConstraints="NO" id="QlU-QG-RiD">
-                                            <rect key="frame" x="16" y="0.0" width="317.5" height="43.5"/>
+                                            <rect key="frame" x="16" y="0.0" width="317.5" height="59.5"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="n3i-kk-LLM">
-                                                    <rect key="frame" x="0.0" y="0.0" width="80" height="43.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="80" height="59.5"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zng-Mh-aQe">
-                                                    <rect key="frame" x="134" y="0.0" width="51.5" height="43.5"/>
+                                                    <rect key="frame" x="134" y="0.0" width="51.5" height="59.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Surname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rgz-eI-3oM">
-                                                    <rect key="frame" x="239.5" y="0.0" width="78" height="43.5"/>
+                                                    <rect key="frame" x="239.5" y="0.0" width="78" height="59.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -58,6 +58,7 @@
                                     <outlet property="firstName" destination="zng-Mh-aQe" id="UzJ-cY-FjB"/>
                                     <outlet property="surName" destination="rgz-eI-3oM" id="XD8-1C-TKG"/>
                                     <outlet property="userThumbnail" destination="n3i-kk-LLM" id="Zwg-p3-1Hb"/>
+                                    <segue destination="KKU-Y0-6WA" kind="show" identifier="detailSegue" id="SFn-f3-xsA"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -67,11 +68,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="IMw-wf-tgT">
-                        <barButtonItem key="rightBarButtonItem" title="Add" id="OxP-1J-YAL">
-                            <connections>
-                                <segue destination="KKU-Y0-6WA" kind="show" identifier="detailSegue" id="b8T-N5-VSc"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="OxP-1J-YAL"/>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W9e-hH-ZmH" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -89,7 +86,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="ZUJ-81-H7P">
                                 <rect key="frame" x="67.5" y="104" width="240" height="379.5"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="G6b-fl-5jH">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="G6b-fl-5jH">
                                         <rect key="frame" x="0.0" y="0.0" width="240" height="240"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gLe-ok-u2o">
